--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins&family=Tajawal:wght@300;400;500;700;800;900&display=swap');
+
 html,
 body {
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  min-height: 100vh;
+  background-color: #191c30;
 }
 
 a {
@@ -13,4 +17,6 @@ a {
 
 * {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
